force-app/main/default/objects/Mautic_timeline__c/Mautic_timeline__c.object-meta.xml
<CustomObject>
    <label>Timeline</label>
    <nameField>
        <label>Nome de Timeline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>