force-app/main/default/objects/Mautic_timeline__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>ActivityDate</label>
    <type>DateTime</type>
</CustomField>