force-app/main/default/objects/Mautic_timeline__c/fields/contact_id__c.field-meta.xml
<CustomField>
    <fullName>contact_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>contact_id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timelines</relationshipLabel>
    <relationshipName>Timelines</relationshipName>
    <type>Lookup</type>
</CustomField>