force-app/main/default/objects/Mautic_timeline__c/fields/Mautic_url__c.field-meta.xml
<CustomField>
    <fullName>Mautic_url__c</fullName>
    <label>Mautic_url</label>
    <type>Url</type>
</CustomField>