force-app/main/default/objects/Mautic_timeline__c/fields/MauticLead__c.field-meta.xml
<CustomField>
    <fullName>MauticLead__c</fullName>
    <externalId>true</externalId>
    <label>MauticLead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>