force-app/main/default/objects/Mautic_timeline__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <label>ReferenceId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>