force-app/main/default/objects/Mautic_timeline__c/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WhoId</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Timelines</relationshipLabel>
    <relationshipName>Timelines</relationshipName>
    <type>Lookup</type>
</CustomField>